--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -123,7 +123,7 @@ body{
 
 .button_create{
     border: solid 2px #fff;
-    background:#00ad5f;
+    background: #ee1000;
     border-radius: 25px;
     padding:8px;
     width: 120px;
@@ -133,7 +133,7 @@ body{
 }
 
 .button_create:hover{
-    background:  #222222;
+    background:  #f78d02;
     color: #fff;
     cursor: pointer;
 }
