--- a/UI/css/footer.css
+++ b/UI/css/footer.css
@@ -1,22 +1,17 @@
 /* footer styling */
 
-footer{
-    position: relative;
-    height: 60px;
-    width:100%;
+footer {
+    left: 0;
+    bottom: 0;
+    font-size: 18px;
+    width: 100%;
     background-color: #000000a8;
-    color:#ffffff;
-    font-size: 17px;
-    bottom:0;
-    margin-top:40px;
-
-}
-footer li{
-    float:left;
-    margin-top:0px;
+    color: #f78d02;
+    text-align: center;
+    height:10%;
 }
 
-footer p{
-    float: right;
-    margin-right :80px;
+footer ul{
+    padding-top:2%;
 }
+
