--- a/UI/css/header.css
+++ b/UI/css/header.css
@@ -21,8 +21,8 @@ header a{
 }
 
 li{
-    border-radius:50px;
-    padding: 70px;
+    padding-right: 70px;
+    padding-left: 70px;
     display:inline;
     text-decoration: none;
     font-weight: lighter;
