--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -44,7 +44,7 @@ body{
 /* primary button */
 .button_primary{
     border: solid 2px white;
-    background-color: #fff;
+    background-color: rgb(243, 140, 44);
     border-radius: 25px;
     padding:15px;
     height: 30px;
@@ -176,4 +176,56 @@ body{
     width:16%;
     background:rgba(0, 0, 0, 0.897);
     border: solid 2px #fff;
+}
+
+
+/* home page styling */ 
+
+#catcher{
+    position:relative;
+    width: 100%;
+    height: 80%;  
+}
+
+.home_image{
+    display:block;
+    width: 100%;
+    height: auto;
+    padding:0;
+    margin:0;
+}
+
+.welcome_text{
+    position: absolute;
+    width: 100%;
+    padding-top: 25%;
+    padding-bottom: 15%;  
+    margin-top:-70%;
+    background-color: rgba(0, 0, 0, 0.616);
+}
+.welcome_text img{
+    width: 30%;
+    height: 30%;
+    margin-left:33%;
+    margin-top:-10%;
+}
+.welcome_text p{
+    color:rgb(243, 140, 44);
+    font-size: 20px;
+    font-weight:lighter;
+    text-align: center;
+    font-style: italic;
+    font-family: 'Cambria', 'Cochin', Georgia, Times, 'Times New Roman', serif,Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    /* background-color: rgba(0, 0, 0, 0.8); */
+    padding-top: 5px;
+    padding-bottom: 25px;
+    text-shadow: 2px 2px 5px rgb(0, 0, 0)
+}
+
+/*home page link styles*/
+.welcome_text p a{
+    text-decoration: none;
+    margin:2%;
 }
