--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -229,3 +229,48 @@ body{
     text-decoration: none;
     margin:2%;
 }
+
+
+/*using media queries to make the page responsive*/
+/* Tablet Landscape */
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%;}  
+}
+
+
+/* Tablet Portrait */
+@media screen and (max-width: 768px) {
+    #primary { width:100%; }
+    #secondary { width:100%; margin:0; border:none; }
+
+    body{
+        font-size:8px;
+    }
+    .welcome_text{
+        padding-bottom: 35px;
+    }
+    .welcome_text img{
+        width:20%;
+        height:20%;
+        margin-left:40%; 
+    }
+    .welcome_text p{
+        font-size: 6px;
+    }
+    .welcome_text p a{
+        border: solid 0.5px #fff;
+        font-size: 6px;
+        padding:4px;
+    }
+    /* end of home page*/
+
+    #titling{
+        font-size: 6px;
+        border: solid .5px #fff;
+        width:20%;
+    }
+    
+
+}
+
