--- a/UI/css/footer.css
+++ b/UI/css/footer.css
@@ -35,17 +35,7 @@ footer ul li{
     
     /*footer*/
     footer{
-        position: fixed;
-        text-align:center;
-
-    }
-    footer li{
-        float:none;
-        margin-left:-50px;
-    }
-    footer p{
-        float:none;
-        margin-left:30px
+        font-size:8px;
     }
 }
 
