--- a/UI/css/footer.css
+++ b/UI/css/footer.css
@@ -1,14 +1,14 @@
 /* footer styling */
 
 footer {
-    left: 0;
-    bottom: 0;
     font-size: 18px;
     width: 100%;
     background-color: #000000a8;
     color: #f78d02;
     text-align: center;
     height:10%;
+    bottom: 0;
+    margin-top:80px;
 }
 
 footer ul{
