--- a/UI/css/footer.css
+++ b/UI/css/footer.css
@@ -7,8 +7,9 @@ footer {
     color: #f78d02;
     text-align: center;
     height:10%;
+    right: 0;
     bottom: 0;
-    margin-top:80px;
+    left: 0;
 }
 
 footer ul{
