[Feature #161141054] User view menu Menu loads from API

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -150,7 +150,7 @@ body{
     background: #ee1000;
     border-radius: 25px;
     padding:8px;
-    width: 120px;
+    /* width: 120px; */
     font-size: 17px;
     color: #fff;
     text-decoration:none;
