--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -166,16 +166,36 @@ body{
     background-color: #ee1000;
 }
 
+.button_edit{
+    /* border: solid 2px #fff; */
+    background: #19ADFF;
+    /* border-radius: 5px; */
+    padding:3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    /* width: 120px; */
+    font-size: 12px;
+    color: #fff;
+    text-decoration:none;
+}
+
+.button_edit:hover{
+    background:  #19ADFF;
+    color: #fff;
+    cursor: pointer;
+}
+.button_edit:visited{
+    color: #ffffff;
+    background-color: #ee100062;
+}
+
 /*end of buttons */
 #titling{
-    color:#ee1000;
+    color:#ffffff;
     margin-bottom:-5%;
-    margin-left:13%; 
-    border-radius:10px;
+    margin-left:-50%; 
     padding:5px;
-    width:16%;
-    background:rgba(0, 0, 0, 0.897);
-    border: solid 2px #fff;
+    font-size:32px;
 }
 
 
@@ -266,9 +286,7 @@ body{
     /* end of home page*/
 
     #titling{
-        font-size: 6px;
-        border: solid .5px #fff;
-        width:20%;
+        font-size: 14px;
     }
     
 
