--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -170,11 +170,11 @@ body{
     /* border: solid 2px #fff; */
     background: #19ADFF;
     /* border-radius: 5px; */
-    padding:3px;
+    padding:8px;
     padding-left: 10px;
     padding-right: 10px;
     /* width: 120px; */
-    font-size: 12px;
+    font-size: 16px;
     color: #fff;
     text-decoration:none;
 }
@@ -185,6 +185,26 @@ body{
     cursor: pointer;
 }
 .button_edit:visited{
+    color: #ffffff;
+    background-color: #ee100062;
+}
+
+.button_delete{
+    background: rgb(255, 4, 4);
+    padding:8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+    color: #fff;
+    text-decoration:none;
+}
+
+.button_delete:hover{
+    background:  #fff;
+    color: rgb(255, 4, 4);
+    cursor: pointer;
+}
+.button_delete:visited{
     color: #ffffff;
     background-color: #ee100062;
 }
