--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -270,6 +270,25 @@ body{
     margin:2%;
 }
 
+#message_error{
+    font-size: 20px;
+    color: rgb(255, 0, 0);
+    font-weight: 600;
+    font-family: fantasy;
+    font-style: italic;
+    text-shadow: 0.75px 0.3px #ffffff;
+
+}
+#message_error1{
+    font-size: 20px;
+    color: rgb(255, 0, 0);
+    font-weight: 600;
+    margin-left: 30%;
+    font-family: fantasy;
+    font-style: italic;
+    text-shadow: 0.75px 0.3px #ffffff;
+
+}
 
 /*using media queries to make the page responsive*/
 /* Tablet Landscape */
