--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -96,9 +96,12 @@ body{
 }
 /* button inside the page navbar */
 .button_info{
-    border: 1px;
+    border: 1px solid #f78d02;
     border-radius:5px;
-    margin-right:8px;
+    padding:8px;
+    text-decoration: none;
+    color:  #fff;
+    background-color: #000;
 
 }
 .button_info:hover{
@@ -107,6 +110,11 @@ body{
     height: 40px;
     width: 150px;
     background:rgb(243, 129, 23);
+    text-decoration: none;
+}
+.button_info a:visited{
+    color: #fff;
+    background:transparent;
 }
 
 .button_user:hover{
@@ -212,7 +220,7 @@ body{
 /*end of buttons */
 #titling{
     color:#ffffff;
-    margin-bottom:-5%;
+    margin-bottom:.25%;
     margin-left:-50%; 
     padding:5px;
     font-size:32px;
